crates/math-core/tests/snapshots/error_test__text_with_math_command.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\text{\\max}"
---
Error: Unknown command "\max".
   ╭─[ <input>:1:7 ]
   │
 1 │ \text{\max}
   │       ──┬─  
   │         ╰─── unknown command
───╯
